--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "analyze": "ANALYZE=true next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "lint": "next lint && npm run lint:stylelint",
-    "lint:stylelint": "stylelint '**/*.css' --cache",
+    "tsc": "tsc",
+    "lint": "eslint --ignore-path .gitignore . --ext ts --ext tsx --ext js --ext jsx",
     "jest": "jest",
     "jest:watch": "jest --watch",
     "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
@@ -22,7 +22,7 @@
     "@mantine/core": "7.12.1",
     "@mantine/hooks": "7.12.1",
     "@next/bundle-analyzer": "^14.2.4",
-    "@tabler/icons-react": "^3.6.0",
+    "@tabler/icons-react": "^3.12.0",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
@@ -49,12 +49,15 @@
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-mantine": "3.2.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-testing-library": "^6.2.2",
+    "eslint-plugin-unused-imports": "3.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
