--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@arcjet/next": "^1.0.0-alpha.24",
     "@mantine/core": "7.12.1",
+    "@mantine/form": "^7.12.2",
     "@mantine/hooks": "7.12.1",
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.12.0",
     "next": "14.2.4",
+    "postmark": "^4.0.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
