--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "analyze": "ANALYZE=true next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
@@ -18,6 +19,7 @@
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.12.0",
     "next": "14.2.4",
+    "next-sitemap": "^4.2.3",
     "postmark": "^4.0.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
